--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: viscend_studio
+name: VisCend
 description: تطبيق VisCend Studio - استوديو التميز البصري
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -33,8 +33,8 @@ dependencies:
   shared_preferences: ^2.2.2
   
   # Utils
-  intl: ^0.19.0
-  url_launcher: ^6.2.2
+  intl: any
+  url_launcher: ^6.2.1
   flutter_dotenv: ^5.1.0
   
   # Icons
