--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -72,7 +72,7 @@ jobs:
 
       
     - name: Build APK (Debug)
-      run: flutter build apk --debug --v
+      run: flutter build apk --debug
       
     - name: Build APK (Release)
       run: flutter build apk --release
