--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,3 +65,9 @@ flutter:
         - asset: assets/fonts/Tajawal-Regular.ttf
         - asset: assets/fonts/Tajawal-Bold.ttf
           weight: 700
+
+dependency_overrides:
+  shared_preferences_android: ^2.5.0
+  sqflite_android: ^2.3.0
+  path_provider_android: ^2.5.0
+  url_launcher_android: ^6.3.0
