--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,51 +9,50 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # UI & Design
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
-  flutter_svg: ^2.0.9
+  google_fonts: ^6.3.2
+  flutter_svg: ^2.2.2
   cached_network_image: ^3.3.0
-  
+
   # State Management
   provider: ^6.1.1
-  
+
   # Animations
-  animate_do: ^3.1.2
-  lottie: ^3.0.0
+  animate_do: ^4.2.0
+  lottie: ^3.3.2
   shimmer: ^3.0.0
-  
+
   # HTTP & APIs
   http: ^1.1.2
-  
+
   # Storage
   shared_preferences: ^2.2.2
-  
-  # Utils
-  intl: any
-  url_launcher: ^6.2.1
-  flutter_dotenv: ^5.1.0
-  
-  # Icons
-  font_awesome_flutter: ^10.9.0
 
+  # Utils
+  intl: ^0.20.2
+  url_launcher: ^6.3.2
+  flutter_dotenv: ^6.0.0
+
+  # Icons
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/icons/
     - assets/animations/
-  
+
   fonts:
     - family: Cairo
       fonts:
@@ -67,7 +66,14 @@ flutter:
           weight: 700
 
 dependency_overrides:
-  shared_preferences_android: ^2.5.0
-  sqflite_android: ^2.3.0
-  path_provider_android: ^2.5.0
-  url_launcher_android: ^6.3.0
+  shared_preferences_android: ^2.4.15
+  shared_preferences_foundation: ^2.5.5
+  sqflite_android: ^2.4.2+2
+  sqflite_common: ^2.5.6
+  sqflite_darwin: ^2.4.2
+  path_provider_android: ^2.2.20
+  path_provider_foundation: ^2.4.3
+  url_launcher_android: ^6.3.24
+  url_launcher_ios: ^6.3.5
+  url_launcher_macos: ^3.2.4
+  url_launcher_web: ^2.4.1
