--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -29,3 +29,16 @@ plugins {
 }
 
 include ":app"
+
+def flutterProjectRoot = rootDir.getAbsoluteFile().toPath()
+
+def plugins = new Properties()
+def pluginsFile = new File(flutterProjectRoot.toFile(), '.flutter-plugins')
+if (pluginsFile.exists()) {
+    pluginsFile.withReader('UTF-8') { reader -> plugins.load(reader) }
+    plugins.each { name, path ->
+        include ":$name"
+        project(":$name").projectDir = new File(path)
+    }
+}
+
