--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
           weight: 700
 
 dependency_overrides:
-  shared_preferences_android: ^2.5.0
-  sqflite_android: ^2.3.0
+  shared_preferences_android: any
+  sqflite_android: any
   path_provider_android: any
-  url_launcher_android: ^6.3.0
+  url_launcher_android: any
