--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -82,6 +82,11 @@ jobs:
         chmod +x ../gradlew
         ../gradlew assembleDebug --warning-mode all
 
+    - name: Create local.properties
+      run: |
+        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
+        echo "flutter.versionCode=1" >> android/local.properties
+        echo "flutter.versionName=1.0.0" >> android/local.properties
 
 
     - name: Build APK (Debug)
