--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
 
 dependency_overrides:
   shared_preferences_android: ^2.4.15
-  sqflite_android: ^2.4.2+2
+  sqflite_android: ^2.5.5
   url_launcher_android: ^6.3.24
   path_provider_android:
     path: packages/path_provider_android
