--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,5 +70,4 @@ dependency_overrides:
   shared_preferences_android: ^2.4.15
   sqflite_android: ^2.3.0
   url_launcher_android: ^6.3.24
-  path_provider_android:
-    path: packages/path_provider_android
+  path_provider_android: ^2.1.15
