--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,5 +32,20 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
+gradle.afterProject { project ->
+    project.plugins.withId("com.android.library") {
+        if (project.hasProperty("android")) {
+            try {
+                project.android.applicationVariants?.all { variant ->
+                    variant.outputs?.each { output ->
+                        output.outputFileName = "${variant.name}.apk"
+                    }
+                }
+            } catch (ignored) {
+                println("Skipped legacy outputFile handling for ${project.name}")
+            }
+        }
+    }
+}
 
 
