--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.getByName("debug")
             // isMinifyEnabled = true
-            isShrinkResources = true
+            // isShrinkResources = true
         }
     }
 
