--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -11,25 +11,25 @@ jobs:
   build:
     name: Build Flutter APK
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-      
+
     - name: Setup Java 17
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
         cache: 'gradle'
-        
+
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.24.0'
         channel: 'stable'
         cache: true
-        
+
     - name: Cache Flutter Dependencies
       uses: actions/cache@v4
       with:
@@ -39,7 +39,7 @@ jobs:
         key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
         restore-keys: |
           ${{ runner.os }}-flutter-
-          
+
     - name: Cache Gradle
       uses: actions/cache@v4
       with:
@@ -50,15 +50,31 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-
-          
+
     - name: Flutter Doctor
       run: flutter doctor -v
-      
+
     - name: Get Flutter Dependencies
       run: flutter pub get
-      
+
     - name: Clean Flutter Build
       run: flutter clean
+
+    - name: Create local.properties
+      run: |
+        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
+        echo "flutter.versionCode=1" >> android/local.properties
+        echo "flutter.versionName=1.0.0" >> android/local.properties
+
+    # ✅ الخطوة الجديدة: إصلاح شامل لجميع المشاكل المعروفة
+    - name: Patch Gradle for OutputFile and legacy calls
+      run: |
+        echo "🔧 Patching Gradle files to remove deprecated OutputFile usage..."
+        find . -name "build.gradle" -exec sed -i 's/OutputFile//g' {} +
+        find . -name "build.gradle" -exec sed -i 's/output.outputFileName/output.outputFile/g' {} +
+        find . -name "build.gradle" -exec sed -i 's/output.outputFileName/outputFileName/g' {} +
+        find . -name "build.gradle" -exec sed -i 's/output.getFile()/outputFile/g' {} +
+        echo "✅ All Gradle files patched successfully."
 
     - name: Patch font_awesome_flutter to fix withValues error
       run: |
@@ -69,61 +85,49 @@ jobs:
             echo "fa_icon.dart not found, skipping patch"
           fi
 
-
     - name: Check outdated packages
       run: flutter pub outdated
 
     - name: Upgrade packages
       run: flutter pub upgrade
 
-    - name: Run Gradle from android/
-      working-directory: android
-      run: |
-        chmod +x ../gradlew
-        ../gradlew assembleDebug --warning-mode all
-
-    - name: Create local.properties
-      run: |
-        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
-        echo "flutter.versionCode=1" >> android/local.properties
-        echo "flutter.versionName=1.0.0" >> android/local.properties
-
-    - name: Patch OutputFile usage
-      run: |
-        find . -name "build.gradle" -exec sed -i 's/OutputFile//g' {} +
-
-
+    # ✅ نحذف هذا الجزء لأنه يكرر بناء يدوي خارج Flutter
+    # - name: Run Gradle from android/
+    #   working-directory: android
+    #   run: |
+    #     chmod +x ../gradlew
+    #     ../gradlew assembleDebug --warning-mode all
 
     - name: Build APK (Debug)
       run: flutter build apk --debug -v
-      
+
     - name: Build APK (Release)
       run: flutter build apk --release
-      
+
     - name: Build App Bundle (Release)
       run: flutter build appbundle --release
-      
+
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
         name: viscend-studio-debug-apk
         path: build/app/outputs/flutter-apk/app-debug.apk
         retention-days: 7
-        
+
     - name: Upload Release APK
       uses: actions/upload-artifact@v4
       with:
         name: viscend-studio-release-apk
         path: build/app/outputs/flutter-apk/app-release.apk
         retention-days: 30
-        
+
     - name: Upload App Bundle
       uses: actions/upload-artifact@v4
       with:
         name: viscend-studio-app-bundle
         path: build/app/outputs/bundle/release/app-release.aab
         retention-days: 30
-        
+
     - name: Display Build Info
       run: |
         echo "✅ Build completed successfully!"
