--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
 
     splits {
         abi {
-            isEnable = true
+            // isEnable = true
             reset()
             include("x86_64", "armeabi-v7a", "arm64-v8a")
             isUniversalApk = false
