--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,4 @@
-flutter.sdk=../../flutter
-flutter.versionCode=1
-flutter.versionName=1.0.0
+sdk.dir=C:\\Users\\hp\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Dev-Res\\flutter_windows_3.35.6-stable\\flutter
+flutter.buildMode=debug
+flutter.versionName=0.0.1
