--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -105,10 +105,10 @@ jobs:
       run: flutter pub upgrade
 
     # ✅ نحذف هذا الجزء لأنه يكرر بناء يدوي خارج Flutter
-    - name: Run Gradle from android/
-      working-directory: android
-      run: |
-        gradlew assembleDebug --warning-mode all
+    # - name: Run Gradle from android/
+    #   working-directory: android
+    #   run: |
+    #     gradlew assembleDebug --warning-mode all
       # chmod +x ../gradlew
 
     - name: Fix permissions (optional)
