--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,41 +4,22 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.9.2 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  # UI & Design
   flutter_localizations:
     sdk: flutter
+
+  provider: ^6.1.2
+  go_router: ^14.1.1
+  flutter_screenutil: ^5.9.3
+  supabase_flutter: ^2.5.3
+  fluttertoast: ^8.2.6
+  flutter_animate: ^4.5.0
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
-  flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.0
-  
-  # State Management
-  provider: ^6.1.1
-  
-  # Animations
-  animate_do: ^3.1.2
-  lottie: ^3.0.0
-  shimmer: ^3.0.0
-  
-  # HTTP & APIs
-  http: ^1.1.2
-  
-  # Storage
-  shared_preferences: ^2.2.2
-  
-  # Utils
-  intl: any
-  url_launcher: ^6.2.1
-  flutter_dotenv: ^5.1.0
-  
-  # Icons
-  font_awesome_flutter: ^10.9.0
+  args: ^2.7.0
 
 
 dev_dependencies:
