--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -115,7 +115,7 @@ jobs:
       run: chmod -R 755 android
 
     - name: من هو يستخدم الخاصية
-      run: gradlew assembleDebug --stacktrace --info
+      run: assembleDebug --stacktrace --info
 
     - name: Build APK (Debug)
       run: flutter build apk --debug
