--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.viscendstudio.app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     
     <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
         android:label="VisCend Studio"
-        android:name=".MainApplication"
+        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
         <activity
