--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,5 @@
 sdk.dir=C:\\Users\\hp\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Dev-Res\\flutter_windows_3.35.6-stable\\flutter
 flutter.buildMode=debug
-flutter.versionName=0.0.1
+flutter.versionName=2.0.0
+flutter.versionCode=2
