--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,28 +17,14 @@ pluginManagement {
     }
 
     plugins {
-        id("com.android.application") version "8.5.0" apply false
-        id("kotlin-android") version "1.9.24" apply false
-        id("dev.flutter.flutter-gradle-plugin") version "1.0.0" apply false
+        id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
     }
-
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.5.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.24" apply false
 }
 
 include ":app"
-
-def flutterProjectRoot = rootDir.getAbsoluteFile().toPath()
-
-def plugins = new Properties()
-def pluginsFile = new File(flutterProjectRoot.toFile(), '.flutter-plugins')
-if (pluginsFile.exists()) {
-    pluginsFile.withReader('UTF-8') { reader -> plugins.load(reader) }
-    plugins.each { name, path ->
-        include ":$name"
-        project(":$name").projectDir = new File(path)
-    }
-}
-
