--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,69 +1,89 @@
-name: VisCend
+name: viscend_studio
 description: تطبيق VisCend Studio - استوديو التميز البصري
 publish_to: 'none'
-version: 1.0.0+1
+version: 2.0.0+2
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
+  flutter: '>=3.16.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # UI & Design
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
-  
+
   # State Management
   provider: ^6.1.1
-  
+
   # Animations
   animate_do: ^3.1.2
   lottie: ^3.0.0
   shimmer: ^3.0.0
-  
+
   # HTTP & APIs
   http: ^1.1.2
-  
+
   # Storage
   shared_preferences: ^2.2.2
-  
+
   # Utils
-  intl: any
-  url_launcher: ^6.2.1
+  intl: ^0.20.2
+  url_launcher: ^6.2.2
   flutter_dotenv: ^5.1.0
-  
+
   # Icons
   font_awesome_flutter: ^10.9.0
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
-  
+
   assets:
-    - assets/images/
-    - assets/icons/
-    - assets/animations/
-  
+    - assets/fonts/
+
   fonts:
     - family: Cairo
       fonts:
+        - asset: assets/fonts/Cairo-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Cairo-Light.ttf
+          weight: 300
         - asset: assets/fonts/Cairo-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Cairo-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Cairo-Bold.ttf
           weight: 700
+        - asset: assets/fonts/Cairo-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Cairo-Black.ttf
+          weight: 900
+
     - family: Tajawal
       fonts:
+        - asset: assets/fonts/Tajawal-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/Tajawal-Light.ttf
+          weight: 300
         - asset: assets/fonts/Tajawal-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Tajawal-Medium.ttf
+          weight: 500
         - asset: assets/fonts/Tajawal-Bold.ttf
           weight: 700
-
-
+        - asset: assets/fonts/Tajawal-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Tajawal-Black.ttf
+          weight: 900
