--- a/.github/workflows/build_flutter.yml
+++ b/.github/workflows/build_flutter.yml
@@ -1,153 +1,53 @@
-name: Build Android APK
+# This workflow builds and tests the Flutter application, then uploads the Android APK as an artifact.
 
+name: Build and Test Flutter App
+
+# Controls when the workflow will run
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main, master, develop ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build Flutter APK
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
+      # 1. Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Java 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        cache: 'gradle'
+      # 2. Set up Java version 17, which is required for your Gradle version
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    # - name: Force Gradle compatibility versions
-    #   run: |
-    #     sed -i 's/com.android.tools.build:gradle:.*/com.android.tools.build:gradle:4.2.2/' android/build.gradle
-    #     sed -i 's/distributionUrl=.*/distributionUrl=https\\:\/\/services.gradle.org\\/distributions\\/gradle-6.9.2-all.zip/' android/gradle/wrapper/gradle-wrapper.properties
-    #     echo "✅ Forced Gradle 6.9.2 + AGP 4.2.2 for OutputFile compatibility"
+      # 3. Set up Flutter SDK
+      - name: Set up Flutter SDK
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true # Enable Flutter cache
 
+      # 4. Get Flutter dependencies
+      - name: Install dependencies
+        run: flutter pub get
 
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.35.6'
-        channel: 'stable'
-        cache: true
+      # 5. Run static analysis to check for errors and warnings
+      # - name: Run Dart Analyzer
+      #   run: flutter analyze
 
-    - name: Cache Flutter Dependencies
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.pub-cache
-          .dart_tool
-        key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-flutter-
+      # 6. Build the Android release APK
+      - name: Build Android APK (Release)
+        run: flutter build apk --release
 
-    - name: Cache Gradle
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-          android/.gradle
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-
-    - name: Flutter Doctor
-      run: flutter doctor -v
-
-    - name: Clean Flutter Build
-      run: flutter clean
-
-    - name: Get Flutter Dependencies
-      run: flutter pub get
-
-    - name: Create local.properties
-      run: |
-        echo "flutter.sdk=$FLUTTER_HOME" > android/local.properties
-        echo "flutter.versionCode=1" >> android/local.properties
-        echo "flutter.versionName=1.0.0" >> android/local.properties
-
-    - name: cleaning 
-      run: |
-        rm -rf ~/.gradle/caches/
-      # cd android && ./gradlew wrapper --gradle-version=8.6
-
-
-    # ✅ الخطوة الجديدة: إصلاح شامل لجميع المشاكل المعروفة
-    - name: Patch Gradle for OutputFile and legacy calls
-      run: |
-        echo "🔧 Patching Gradle files to remove deprecated OutputFile usage..."
-        find . -name "build.gradle" -exec sed -i 's/OutputFile//g' {} +
-        find . -name "build.gradle" -exec sed -i 's/output.outputFileName/output.outputFile/g' {} +
-        find . -name "build.gradle" -exec sed -i 's/output.outputFileName/outputFileName/g' {} +
-        find . -name "build.gradle" -exec sed -i 's/output.getFile()/outputFile/g' {} +
-        echo "✅ All Gradle files patched successfully."
-
-    - name: Patch font_awesome_flutter to fix withValues error
-      run: |
-          FILE="$HOME/.pub-cache/hosted/pub.dev/font_awesome_flutter-10.9.0/lib/src/fa_icon.dart"
-          if [ -f "$FILE" ]; then
-            sed -i 's/withValues(alpha: iconColor.a \* iconOpacity)/withOpacity(iconColor.opacity * iconOpacity)/' "$FILE"
-          else
-            echo "fa_icon.dart not found, skipping patch"
-          fi
-
-    - name: Check outdated packages
-      run: flutter pub outdated
-
-    - name: Upgrade packages
-      run: flutter pub upgrade
-
-    # ✅ نحذف هذا الجزء لأنه يكرر بناء يدوي خارج Flutter
-    # - name: Run Gradle from android/
-    #   working-directory: android
-    #   run: |
-    #     gradlew assembleDebug --warning-mode all
-      # chmod +x ../gradlew
-
-    - name: Fix permissions (optional)
-      run: chmod -R 755 android
-
-
-    - name: Build APK (Debug)
-      run: flutter build apk --debug
-
-    - name: Build APK (Release)
-      run: flutter build apk --release
-
-    - name: Build App Bundle (Release)
-      run: flutter build appbundle --release
-
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: viscend-studio-debug-apk
-        path: build/app/outputs/flutter-apk/app-debug.apk
-        retention-days: 7
-
-    - name: Upload Release APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: viscend-studio-release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
-        retention-days: 30
-
-    - name: Upload App Bundle
-      uses: actions/upload-artifact@v4
-      with:
-        name: viscend-studio-app-bundle
-        path: build/app/outputs/bundle/release/app-release.aab
-        retention-days: 30
-
-    - name: Display Build Info
-      run: |
-        echo "✅ Build completed successfully!"
-        echo "📱 APK Size (Debug): $(du -h build/app/outputs/flutter-apk/app-debug.apk | cut -f1)"
-        echo "📱 APK Size (Release): $(du -h build/app/outputs/flutter-apk/app-release.apk | cut -f1)"
-        echo "📦 Bundle Size: $(du -h build/app/outputs/bundle/release/app-release.aab | cut -f1)"
+      # 7. Upload the generated APK as an artifact
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
